# webrock

./: README.md  app.py  config.py  load_plugins.py  pyproject.toml  requirements.txt  run.py  setup.py
data_access/: Company.py  DataCompiler.py  TradingDataAggregation.py  dao_manager.py
data_access/db/: async_database.py  create_db.sql  stonksDB.sqlite
plugins/: load_plugins.py
plugins/aggregations/: update_missing_aggregations.py
plugins/data_sources/: market.py  news.py  stream_price_data.py  tickers.py
plugins/data_sources/helpers/: missing_data.py
plugins/prediction/: create_model.py  data_generator.py  train_model.py
static/: control_panel.css
templates/: _plugin_display.html
utils/: project_utilities.py
webrock/: app.py  decorator.py  load_plugins.py  load_project.py
webrock/templates/: _form_macros.html  _plugin_display.html  control_panel.html
webrock/tests/: app_tests.py
