[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webrock"
version = "0.1"
description = "Webrock is a lightweight server designed to integrate seamlessly with Python projects."
readme = "README.md"
requires-python = ">=3.6"

# Dependencies
dependencies = [
    "sanic",
    "sanic_jinja2",
]

# Optional: If you have additional URLs like documentation or source code
[project.urls]
repository = "https://github.com/kjbassett/webrock"

# Entry points for command-line scripts
[project.scripts]
rock = "webrock.run:main"

# Include package data
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters